# yamlfmt

./: .gitignore  Cargo.toml  README.md  dprint.json  gen_patch.sh  go.mod  go.sum  jsr.jsonc  justfile  package.json  yamlfmt.d.ts  yamlfmt.patch  yamlfmt_node.js  yamlfmt_vite.js
.github/workflows/: publish.yml  test.yml
extra/: yamlfmt_esm.js  yamlfmt_node.js  yamlfmt_vite.js  yamlfmt_web.d.ts  yamlfmt_web.js
scripts/: build.sh  doc.d.ts  package.mjs  patch.mjs
src/: config.rs  lib.go  lib.rs
test_bun/: bun.spec.ts
test_data/block-folded/: keep.yaml.snap  newline.yaml.snap  seq.yaml.snap
test_data/block-literal/: keep.yaml.snap  newline.yaml.snap  seq.yaml.snap
test_data/brace-spacing/: flow-map.yaml.snap
test_data/bracket-spacing/: flow-sequence.yaml.snap
test_data/comment/: collection.yaml.snap  end-comment.yaml.snap  flow-sequence-mapping.yaml.snap  in-empty-item-without-newlline.yaml.snap  issue-9130.yaml.snap  map-2.yaml.snap  map-3.yaml.snap  map-4.yaml.snap  map.yaml.snap  object.yaml.snap  sequence-2.yaml.snap  sequence.yaml.snap  set.yaml.snap
test_data/flow-mapping/: array-key-array-value.yaml.snap  array-key.yaml.snap  array-value.yaml.snap  comment-between.yaml.snap  empty-line-collapse.yaml.snap
test_data/flow-sequence/: array-key-array-value.yaml.snap  array-key.yaml.snap  array-value.yaml.snap  comment-between.yaml.snap  empty-line-collapse.yaml.snap
test_data/ignore/: document.yaml.snap  leading-comment.yaml.snap  (+3 more)
test_deno/: deno.test.ts
test_node/: test-node.mjs
test_utils/: fmt_utils.mjs
tests/: fmt.rs
(+130 files in other folders)
