[package]
authors     = ["magic-akari <akari.ccino@gmail.com>"]
description = "A WASM Based YAML Formatter"
name        = "yamlfmt"

edition    = "2024"
homepage   = "https://github.com/wasm-fmt/yamlfmt"
keywords   = ["wasm", "yaml", "formatter"]
license    = "MIT"
readme     = "README.md"
repository = "https://github.com/wasm-fmt/yamlfmt"
version    = "0.1.2"

    [package.metadata.wasm-pack.profile.release]
    wasm-opt = [
        "-Os",
        "--enable-bulk-memory",
        "--enable-nontrapping-float-to-int",
    ]

[dependencies]
pretty_yaml = { version = "0.5", features = ["config_serde"] }

serde              = "1.0"
serde-wasm-bindgen = "0.6"
serde_json         = "1.0"
wasm-bindgen       = "0.2"

[dev-dependencies]
insta           = { version = "1.43", features = ["glob"] }
similar-asserts = "1.5"
toml            = "0.8"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug         = false     # set to `true` for debug information
lto           = true
opt-level     = "s"
panic         = "abort"   # Let it crash and force ourselves to write safe Rust.
strip         = "symbols" # set to `false` for debug information
